--- a/laptopdata-analysis/index.html
+++ b/laptopdata-analysis/index.html
@@ -2,13 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="/src/assets/laptop-svgrepo-com.svg"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Laptop Center</title>
     <style>
       #root {
         margin: 0 !important;
         width: 100vw !important;
+        padding: 0 !important;
       }
     </style>
   </head>
